[package]
name = "graph"
version = "0.1.0"
authors = ["nlam"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.8", features = ["json"] }
serde_json = "1.0.57"
futures = "0.3.5"
plotly = { version = "0.6.0", features = ["kaleido"] }
rayon = "1.4.0"
tokio = {version = "0.2.22", features = ["full"] }
